# doctalk

./: .gitignore  .pre-commit-config.yaml  Dockerfile  EVALUATION.md  GOVERNANCE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
sample_data_suit/: README_SAMPLE.md  flight_receipt_294.txt
sample_data_suit/multiple_files_query/: meeting_minutes_feb15.md
sample_testing_suits/auth/: AUTH_TEST_SUIT.md
sample_testing_suits/chat/: project_phoenix.md  secret_merger_memo.txt
sample_testing_suits/chat/multiple_files_query/: neon_product.txt  neon_team.txt
src/api/: auth.py  chat.py  schemas.py
src/core/: config.py  ingestion.py  llm_factory.py  observability.py  rag.py  secrets_manager.py  session.py
src/ui/: chat.py
tests/: conftest.py  test_evaluation.py  test_integration.py
